# libAmazonMWS

./: CMakeLists.txt  README  README.md
lib/: AmazonMWS.h  BasicClient.cpp  BasicClient.h  CMakeLists.txt  CURLGlobal.cpp  CURLGlobal.h  Client.h  Client.inl
lib/Service/: Feed.cpp  Feed.h  FulfillmentInboundShipment.cpp  FulfillmentInboundShipment.h  FulfillmentInventory.cpp  FulfillmentInventory.h  FulfillmentOutboundShipment.cpp  FulfillmentOutboundShipment.h  Order.cpp  Order.h  Report.cpp  Report.h  Sellers.cpp  Sellers.h
samples/: CMakeLists.txt
samples/advanced_pugi/: CMakeLists.txt  main.cpp
samples/basic/: CMakeLists.txt  main.cpp
samples/basic_pugi/: CMakeLists.txt  main.cpp
